# notify

./: Cargo.toml  config.toml  notify.service  setup.sh
src/: config.rs  dbus.rs  main.rs  window.rs
themes/: catppuccin-latte.css  catppuccin-mocha.css  discord-dark.css  gruvbox.css  liquid-glass.css  nord.css  tokyo-night.css
