[package]
name = "notify"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
gtk4-layer-shell = { version = "0.4" }
zbus = "4.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
glib = "0.20"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
gdk4 = "0.9"
